# checkpointed-pipeline

./: README.md  checkpointed-pipeline.cabal
lib/Control/: Checkpointed.hs
lib/Control/Checkpointed/: Simple.hs
tests/: doctests.hs  tests.hs
