name:                checkpointed-pipeline
version:             0.1.0.0
synopsis:            Run self-contained pipelines of checkpointed computations.
description:         Compose checkpointed computations to form self-contained
                     pipelines, and avoid uneccesary work when running the 
                     pipelines by recovering from the latest existing 
                     checkpoint.
license:             BSD3
license-file:        LICENSE
author:              Daniel Diaz
maintainer:          diaz.carrete@facebook.com
-- copyright:           
category:            Control
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

Extra-Source-Files:
    README.md

source-repository head
    type: git
    location: https://github.com/danidiaz/checkpointed-pipeline.git

library
  exposed-modules:     Control.Checkpointed
  build-depends:
                       base          >= 4.6   && < 5,
--                       containers    >= 0.5.7 && < 0.6,
--                       profunctors   >= 5.2   && < 5.6,
--                       bifunctors    >= 5.4   && < 5.5,
--                       streaming     >= 0.1.4 && < 0.2,
--                       transformers  >= 0.5   && < 0.6,
                       semigroupoids >= 5.1   && < 6,
--                       comonad       >= 5     && < 6,
                       directory     >= 1.3   && < 2
  hs-source-dirs:      lib
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite doctests
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -threaded
  hs-source-dirs:      tests,lib
  main-is:             doctests.hs
  other-modules:       Control.Checkpointed
  build-depends:
                       base          >= 4.6    && < 5,
                       doctest       >= 0.11
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests, lib
  main-is:             tests.hs
  other-modules:       Control.Checkpointed
  build-depends:
                       base          >=4.6 && <5,
--                       containers    >= 0.5.7 && < 0.6,
--                       profunctors   >= 5.2   && < 5.6,
--                       bifunctors    >= 5.4   && < 5.5,
--                       streaming     >= 0.1.4 && < 0.2,
--                       transformers  >= 0.5   && < 0.6,
                       semigroupoids >= 5.1   && < 6,
--                       comonad       >= 5     && < 6,
                       directory     >= 1.2   && < 2,
                       tasty         >=0.10.1.1,
                       tasty-hunit   >=0.9.2
  default-language:    Haskell2010
